fixing sideBar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background: url('https://images.pexels.com/photos/3166835/pexels-photo-3166835.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
+    background: url('https://files.catbox.moe/8ll6dt.jpg');
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
